--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 
 </head>
 <body>
+    <!-- eserizio 1 -->
     
     <div id="response-container"></div>
+
+    <br>
+    <hr>
+    <br>
+
+    <!-- esercizio 2 -->
+
+    <input id="even-odd" type="text">
+    <input id="five" type="number">
+    <button id="play">Gioca</button>
 
     <script src="js/script.js"></script>
 </body>
