completed ex 2 (console.log versione)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- eserizio 1 -->
-    
+
     <div id="response-container"></div>
 
     <br>
@@ -20,8 +20,8 @@
 
     <!-- esercizio 2 -->
 
-    <input id="even-odd" type="text">
-    <input id="five" type="number">
+    <input id="even-odd" type="text" placeholder="scegli tra pari e dispari">
+    <input id="five" type="number" placeholder="scegli un numero tra 1 e 5">
     <button id="play">Gioca</button>
 
     <script src="js/script.js"></script>
