--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <input id="five" type="number" placeholder="scegli un numero tra 1 e 5">
     <button id="play">Gioca</button>
 
+    <div id="winner-container"></div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
